--- a/FeedTheBeast/server.properties
+++ b/FeedTheBeast/server.properties
@@ -1,5 +1,6 @@
 #Minecraft server properties
-#Sat Mar 13 17:10:40 UTC 2021
+#Sat Mar 13 17:26:08 UTC 2021
+spawn-protection=16
 max-tick-time=60000
 generator-settings=
 force-gamemode=false
@@ -34,7 +35,7 @@ generate-structures=true
 online-mode=true
 max-build-height=256
 level-seed=
-prevent-proxy-connections=false
 use-native-transport=true
-motd=A Minecraft Server
+prevent-proxy-connections=false
 enable-rcon=false
+motd=A Minecraft Server
